Remove high contrast rotation animation (too buggy)

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -343,8 +343,6 @@
 .Header-toggle {
   width: 1.5625rem;
   height: 1.5625rem;
-  transition: transform 200ms var(--ease);
-  will-change: transform;
 }
 
 .Header-button--contrast:hover {
